--- a/www/updatemodal.html
+++ b/www/updatemodal.html
@@ -10,7 +10,7 @@
             <label class="control-label col-md-2 col-lg-2" >Device category:</label>
             <div class="col-lg-6 col-md-6">
                 <select class="form-control" name="devCategory" placeholder="Choose a catergory" ng-model="items.devCategory">
-                    <option ng-disabled="true" ng-selected="true" value="">Choose a catergory...</option>
+                    <option ng-selected="true" value="">Choose a catergory...</option>
                     <option ng-repeat="cat in category | unique:'Category'">{{cat.Category}}</option>
                 </select>
             </div>
@@ -19,7 +19,7 @@
             <label class="control-label col-md-2 col-lg-2" >Choose device :</label>
             <div class="col-lg-6 col-md-6">
                 <select class="form-control" name="deviceType" placeholder="Choose an option that perfectly matches the device or choose the closest one " ng-model="items.devName" required>
-                    <option ng-disabled="true" ng-selected="true" value="">Choose a Device...</option>
+                    <option  ng-selected="true" value="">Choose a Device...</option>
                     <option ng-repeat="dev in device | unique:'dev' | filter:{Category:devCat}">{{dev.dev}}</option>
                 </select>
             </div>
@@ -49,7 +49,7 @@
         <div class="form-group">
             <label class="control-label col-md-2 col-lg-2">Condition :</label>
             <div class="col-lg-6 col-md-6">
-                <select class="form-control" name="deviceCondition" placeholder="Choose whether the device is new/old/refurbished" ng-model="items.Condition" required>
+                <select class="form-control" name="deviceCondition" placeholder="Choose whether the device is new/old/refurbished" ng-model="items.devCondition" required>
                     <option value="">choose a device condition</option>
                     <option value="Old">Old</option>
                     <option value="New">New</option>
@@ -67,7 +67,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10 col-lg-offset-2 col-lg-10">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="reset" class="btn btn-default">Cancel</button>
+                <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
             </div>
         </div>
     </form>
