New changes, Assigning hardware goes into View inventory. click event has to be worked further

--- a/www/updatemodal.html
+++ b/www/updatemodal.html
@@ -1,9 +1,9 @@
 
 <div class="modal-header">
-    <h3 class="modal-title">Update Inventory  </h3>
+    <h3 class="modal-title">Update Inventory </h3>
 </div>
 <div class="modal-body">
-    <form role="form" class="form-horizontal" action="../server/updateinventory.php" method="post" ng-controller="addinventoryController" >
+    <form role="form" class="form-horizontal" action="../server/updateinventory.php" method="post"  >
         <h4>Entry No: {{items.Sno}}</h4>
         <input type="hidden" name="entryid" value="{{items.Sno}}" >
         <div class="form-group">
